# cpu-loader

./: .gitignore  .gitmessage  .pre-commit-config.yaml  COMMIT_MESSAGE_FORMAT.md  DISTROS_CONFIG.md  LICENSE  MANIFEST.in  README.md  build_deb.sh  build_wheels.sh  cpu_loader.py  distros.yaml  main.py  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/scripts/: README.md  build-deb-docker.sh  create-packages-files.sh  create-release-files.sh  create-repo-readme.sh  generate-matrix.py  organize-packages.sh  update-version.sh
.github/workflows/: README.md  build-all.yml  build-deb.yml  build-wheels.yml  ci.yml
debian/: changelog  control  copyright  rules
examples/: computation_types_demo.py
scripts/: cleanup_ghar.sh  take_screenshots.py
src/: cpu_loader.py  cpu_loader_core.c  example.py  main.py  mqtt_publisher.py
src/cpu_loader/: __init__.py  __main__.py  cpu_loader.py  cpu_loader_core.c  main.py  mqtt_publisher.py
src/cpu_loader/templates/: index.html
