[project]
name = "cpu-loader"
version = "0.1.0"
description = "A tool to generate CPU load on a system with runtime configuration through a WebUI and REST API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "the78mole", email = "the78mole@users.noreply.github.com"}
]
keywords = ["cpu", "load", "testing", "stress-test", "performance", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: System :: Benchmark",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi==0.122.0",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.4",
    "requests==2.32.5",
    "psutil>=5.9.0",
    "websockets>=12.0",
    "paho-mqtt>=2.1.0",
]

[project.scripts]
cpu-loader = "cpu_loader.__main__:run"

[project.urls]
Homepage = "https://github.com/the78mole/cpu-loader"
Repository = "https://github.com/the78mole/cpu-loader"
Issues = "https://github.com/the78mole/cpu-loader/issues"
Changelog = "https://github.com/the78mole/cpu-loader/releases"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cpu_loader*"]

[tool.setuptools.package-data]
cpu_loader = ["templates/*.html", "static/*", "*.c"]
